# vifoodKG

./: .env.example  .gitignore  EMBEDDING_FIX_REPORT.md  Question Type.md  README.md  monan.txt  pyproject.toml
ViFoodKG/: .env.example  .gitignore  pyproject.toml
ViFoodKG/data/: master_entities.json  null_evidence_tasks.csv  raw_unique_labels.json
ViFoodKG/notebooks/: Neo4j_KG_EDA.ipynb  debug_missing_image_vqa.ipynb  delete_vqa_rows_with_empty_triples.ipynb  filter_yes_no_vqa_cleanup.ipynb  import_vqa.ipynb  retrieve_missing_image.ipynb  split_vqa_ranges_from_supabase.ipynb  vqa_supabase_statistics.ipynb
ViFoodKG/src/: 01_kg_entity_extractor.py  03_kg_triple_extractor.py  04_kg_neo4j_ingestor.py  05_kg_vectorizer.py  check_kg.py  import_kg_triples.py
ViFoodVQA/: .env.example  .gitignore
ViFoodVQA/src/: 07_debug_missing_vqa.py  query.py
config/: Question Type.md  ontology_config.json  supabase_schema.sql  test_dishes.json
data/: _probe.json  master_entities.json  question_types.csv  raw_unique_labels.json
data/extracted/: Question Type b3b4058414e98253bb4781a561f40fd0.md
docs/: KNOWLEDGE_GAP_REPORT.md  report-issue.md  retrieve_logic_changes_report.md
evaluation/: .gitignore  README.md  pyproject.toml
evaluation/configs/: eval.yaml  eval_phi.yaml  eval_phi_kaggle.yaml  eval_qwen.yaml  eval_qwen_kaggle.yaml  eval_qwen_kaggle_4bit.yaml
evaluation/docs/: full_eval_all_conditions_summary.md
evaluation/src/vifood_eval/: data.py  models.py  parsing.py  prompts.py  run.py
evaluation/tests/: test_models.py  test_parsing.py  test_run_scenarios.py
notebooks/: 05_vectorizer_colab.py  debug_missing_image_vqa.ipynb  generate_vqa.ipynb  query_colab.py  retrieve_missing_image.ipynb  vqa_supabase_statistics.ipynb
src/: 01_scraper.py  02_enricher.py  02_kg_entity_classifier.py  03_kg_triple_extractor.py  04_kg_neo4j_ingestor.py  06_generate_vqa.py  07_debug_missing_vqa.py  debug_blind_spots.py  debug_missing_vqa.py  query.py
streamlit/: app.py
(+21 files in other folders)
